bugzid: 7071  with in firefox 4, the curator-only gbrowse images on the blast results were always visible.  By replacing the css-only popup with a jqueryTOOLs tooltip, we can keep them
git-svn-id: file:///research/zcentral/Vault/SVNROOT/ZFIN_WWW/trunk@23890 908b024a-c82b-635c-c293-f2b15b23277c

--- a/home/css/popup.css
+++ b/home/css/popup.css
@@ -177,3 +177,17 @@ a.popup-link img { text-decoration: none; }
     margin-right: 5px;
 }
 
+
+
+a.gbrowse_hover{
+    background-color:#cfc;
+    font-weight: bold;
+    color:#000;
+    text-decoration:none}
+
+.gbrowse_popup{display: none}
+
+a.gbrowse_hover:hover .gbrowse_popup{ /*the span will display just on :hover state*/
+   background-color:#fff; color:#000;
+   text-align: center;
+}
